--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body{
     background-position: center;
     background-size: cover;
     /* height: 2rem; */
-    padding: 12px;
+    /* padding: 12px; */
     text-align: center;
     display: flex;
     justify-content: center;
